update index page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>demo-git</h1>
     <h2>Page demo successful</h2>
-    <h3>check again.</h3>
+    <h3>check 2</h3>
     <h4>Xin chào thế giới.</h4>
   </body>
 </html>
